# romi-blog

./: .gitattributes  .gitignore  Cargo.toml  README.md  REAMDE.md  TODO.md  angular.json  biome.json  build.rs  openapi.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  request.http  requirements.txt  romi.toml  rustfmt.toml  tsconfig.app.json  uno.config.ts
.github/workflows/: build.yml
client/: angular.json  index.html  main.server.ts  main.ts  package.json  uno.config.ts
client/app/: app.component.html  app.component.ts  app.config.server.ts  app.config.ts  app.routes.server.ts  app.routes.ts
client/app/directives/: web-component-checkbox-accessor.directive.ts  web-component-input-accessor.directive.ts  web-component-switch-accessor.directive.ts  web-component-value-accessor.directive.ts
client/app/guards/: auth.guard.ts  debug.guard.ts
client/app/interceptors/: auth.interceptor.ts  errorInterceptor.ts  transferInterceptor.ts
client/app/loading/: loading.component.ts
client/app/models/: api.model.ts
client/app/routes/: admin.routes.ts  public.routes.ts
client/app/services/: api.service.ts  auth.service.ts  browser.service.ts  cache.service.ts  highlighter.service.ts  layout.service.ts  logger.service.ts  notify.service.ts  store.service.ts
client/app/shared/: constants.ts  index.ts  music.json  resolvers-key.ts  settings-resolver.ts  title-strategy.ts  tools.ts  types.ts  utils.ts
client/app/styles/: index.css
client/app/utils/: index.ts  romi-component-factory.ts  web-component-directive-factory.ts
client/environments/: environment.development.ts  environment.ts
client/public/data/: bilibili.json
client/src/: index.html  output.css  styles.css  tailwind.config.js
client/src/app/: app.component.html  app.component.ts  app.config.ts  (+1 more)
data/: background_1.txt  background_2.txt  background_3.txt  music_cache.json
scripts/: comments.ts  common.ts  common_to.ts  dev.py  dev.ts  export.ts  import.ts  ip.py  prebuild.py  request.http  temp.ts  transfer.ts
server/: .env  Cargo.toml  data.sql
server/posts/: 126.md  129.md  137.md  180.md  209.md  212.md  213.md  219.md  220.md  221.md  232.md  233.md  255.md  256.md  259.md  26.md  261.md  266.md  267.md  281.md  282.md  286.md  295.md  349.md  352.md  356.md  363.md  365.md  370.md  373.md  377.md  379.md  384.md  42.md  43.md  44.md  45.md  92.md
server/src/: main.rs  pool.rs
server/src/api/: articles.rs  posts.rs
server/src/entity/: mod.rs  prelude.rs  romi_articles.rs  romi_comments.rs  romi_metas.rs  romi_posts.rs  romi_relationships.rs  romi_users.rs
server/src/utils/: mod.rs  req.rs
src/: app.rs  constant.rs  main.rs  recorder.rs  server.ts
src/api/: global.rs  hitokoto.rs  meta.rs  mod.rs  post.rs  seimg.rs
src/entity/: mod.rs  prelude.rs  romi_characters.rs  romi_comments.rs  romi_fields.rs  romi_hitokotos.rs  romi_metas.rs  romi_news.rs  romi_news_comments.rs  romi_posts.rs  romi_seimgs.rs  romi_users.rs
src/guards/: access.rs  admin.rs  auth.rs  client_info.rs  mod.rs  user.rs
src/middlewares/: mod.rs
src/models/: character.rs  comment.rs  hitokoto.rs  info.rs  meta.rs  mod.rs  news.rs  post.rs  seimg.rs  user.rs  utils.rs
src/routes/: character.rs  comment.rs  global.rs  hitokoto.rs  info.rs  meta.rs  mod.rs  news.rs  post.rs  seimg.rs  user.rs  utils.rs
src/service/: cache.rs  mod.rs  music.rs  recorder.rs  ssr.rs
src/tools/: markdown.rs
src/utils/: api.rs  bootstrap.rs  cache.rs  catcher.rs  config.rs  cros.rs  http.rs  logger.rs  mod.rs  pool.rs  recorder.rs  request_logger.rs  ssr.rs
ui/: README.md  index.html  package.json  styles.css  tsconfig.json  vite.config.ts
ui/demo/: main.ts
ui/src/: index.ts  preset.ts  utils.ts
(+163 files in other folders)
