[workspace]
members = [".", "library/roga", "library/migration"]

[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
license = "BAN-ZHINESE-USING"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.0.1", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
] }
sea-orm-rocket = "0.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs"] }
dotenvy = "0.15.7"
anyhow = "1.0.89"
migration = { path = "library/migration" }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
serde = { version = "1.0.210", features = ["derive"] }
roga = { path = "library/roga" }
rocket_cors = "0.6.0"
futures = "0.3.31"
reqwest = "0.12.12"
config = "0.15.6"
ts-rs = "10.1.0"
