[workspace]
members = [".", "library/roga", "library/migration", "library/fetcher"]

[package]
name = "romichan"
version = "0.1.0"
edition = "2024"
publish = false
license = "BAN-ZHINESE-USING"

[[bin]]
name = "romichan"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
# axum-extra = { version = "0.10", features = ["cookies"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sea-orm = { version = "1.0", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
# moka = { version = "0.12", features = ["future"] }
dotenvy = "0.15.7"
config = "0.15.6"
once_cell = "1.21.3"
reqwest = "0.12.22"
http = "1.3.1"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1" }
migration = { path = "library/migration" }
fetcher = { path = "library/fetcher" }
roga = { path = "library/roga" }
# async-trait = { version = "0.1" }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
sysinfo = "0.37"
uuid = { version = "1.13.1", features = ["v4"] }
ts-rs = "11.0.1"
rand = "0.8.5"
