[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
license = "BAN-CHINAMAN-USING"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.0.1", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
] }
sea-orm-rocket = "0.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs"] }
dotenvy = "0.15.7"
anyhow = "1.0.89"
migration = { version = "0.1.0", path = "./migration" }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
serde = { version = "1.0.210", features = ["derive"] }
walkdir = "2.5.0"
rocket_cors = "0.6.0"
futures = "0.3.31"
